# checkerboard_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: capture_checkerboard.h
src/: capture_checkerboard.cpp
